Various build fixes for 6.0.5-alpha

SyncObject.cpp:
  #include <string.h> for strlen()
plug.in, Makefile.am, configure.in:
  CXXFLAGS is a user variable, you should not override it;
  use AM_CXXFLAGS instead.
hostname.cc:
  EAI_NODATA was deprecated in RFC3493, and at least FreeBSD
  has removed it in favour of EAI_NONAME, so handle that
  case.  May fix bug#34292.
libevent.m4:
  Wrap AH_VERBATIM sections within HAVE_LIBEVENT as
  they are defined unconditionally and break if
  libevent is not used.
azio.h:
  No comma for final enum.